Crash in RNA_enum_from_value while inspecting compositor image node properties in outliner #52232

Closed
opened 2017-07-31 13:01:10 +02:00 by Ralf Hölzemer · 4 comments

System Information
system-info.txt

Blender Version
2.78.6 09eac0159d master

Short description of error
Blender crashes while inspecting compositor image node properties in the outliner under the "Data-Blocks" view

Exact steps for others to reproduce the error

  • open outliner-crash.blend
  • make sure the outliner is in "Data-Blocks" mode
  • expand Scenes->Scene->Node Tree->Compositing Nodetree->Nodes->Image
  • scroll down

On my machine, the crash happens as soon as i reach the "Layer" property of the image datablock.

Backtrace

BLI_assert failed: /home/ralf/Source/blender/blender/source/blender/makesrna/intern/rna_access.c:1270, RNA_property_enum_items_ex(), at 'item != ((void *)0)'

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.
0x0000555558cd71fc in RNA_enum_from_value (item=0x0, value=0) at /home/ralf/Source/blender/blender/source/blender/makesrna/intern/rna_access.c:1499
1499		for (; item->identifier; item++, i++) {
(gdb) bt
- 0  0x0000555558cd71fc in RNA_enum_from_value (item=0x0, value=0) at /home/ralf/Source/blender/blender/source/blender/makesrna/intern/rna_access.c:1499
- 1  0x0000555558046a78 in ui_def_but_rna (block=0x7fffb5f8d508, type=2048, retval=0, str=0x0, x=330, y=-2246, width=165, height=21, ptr=0x7fffb5ec46f8, prop=0x55555eacff40 <rna_CompositorNodeImage_view>, 
    index=-1, min=0, max=0, a1=-1, a2=-1, tip=0x0) at /home/ralf/Source/blender/blender/source/blender/editors/interface/interface.c:3431
#2  0x0000555558047e6a in uiDefButR_prop (block=0x7fffb5f8d508, type=2048, retval=0, str=0x0, x=330, y=-2246, width=165, height=21, ptr=0x7fffb5ec46f8, prop=0x55555eacff40 <rna_CompositorNodeImage_view>, 
    index=-1, min=0, max=0, a1=-1, a2=-1, tip=0x0) at /home/ralf/Source/blender/blender/source/blender/editors/interface/interface.c:3767
#3  0x00005555580a4520 in uiDefAutoButR (block=0x7fffb5f8d508, ptr=0x7fffb5ec46f8, prop=0x55555eacff40 <rna_CompositorNodeImage_view>, index=-1, name=0x0, icon=0, x1=330, y1=-2246, x2=165, y2=21)
    at /home/ralf/Source/blender/blender/source/blender/editors/interface/interface_utils.c:112
#4  0x0000555557dad59e in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5bf5420)
    at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:916
#5  0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5bf5b20)
    at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934
#6  0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5ec4960)
    at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934
#7  0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5ec4b20)
    at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934
#8  0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5faaa40)
    at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934
#9  0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5faaab0)
    at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934
#10 0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb83d8920)
    at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934
#11 0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5863660)
    at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934
- 12 0x0000555557db0e02 in draw_outliner (C=0x7fffcf4910b8) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:1888
- 13 0x0000555557da9769 in outliner_main_region_draw (C=0x7fffcf4910b8, ar=0x7fffb5b13248) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/space_outliner.c:278
- 14 0x00005555582736e9 in ED_region_do_draw (C=0x7fffcf4910b8, ar=0x7fffb5b13248) at /home/ralf/Source/blender/blender/source/blender/editors/screen/area.c:518
- 15 0x0000555557ce0c48 in wm_method_draw_triple (C=0x7fffcf4910b8, win=0x7fffb5e73d48) at /home/ralf/Source/blender/blender/source/blender/windowmanager/intern/wm_draw.c:568
- 16 0x0000555557ce1bd2 in wm_draw_update (C=0x7fffcf4910b8) at /home/ralf/Source/blender/blender/source/blender/windowmanager/intern/wm_draw.c:966
- 17 0x0000555557cdb583 in WM_main (C=0x7fffcf4910b8) at /home/ralf/Source/blender/blender/source/blender/windowmanager/intern/wm.c:510
#18 0x0000555557cd6591 in main (argc=1, argv=0x7fffffffe148) at /home/ralf/Source/blender/blender/source/creator/creator.c:527
**System Information** [system-info.txt](https://archive.blender.org/developer/F687645/system-info.txt) **Blender Version** 2.78.6 09eac0159db master **Short description of error** Blender crashes while inspecting compositor image node properties in the outliner under the "Data-Blocks" view **Exact steps for others to reproduce the error** - open [outliner-crash.blend](https://archive.blender.org/developer/F687656/outliner-crash.blend) - make sure the outliner is in "Data-Blocks" mode - expand Scenes->Scene->Node Tree->Compositing Nodetree->Nodes->Image - scroll down On my machine, the crash happens as soon as i reach the "Layer" property of the image datablock. **Backtrace** ``` BLI_assert failed: /home/ralf/Source/blender/blender/source/blender/makesrna/intern/rna_access.c:1270, RNA_property_enum_items_ex(), at 'item != ((void *)0)' Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x0000555558cd71fc in RNA_enum_from_value (item=0x0, value=0) at /home/ralf/Source/blender/blender/source/blender/makesrna/intern/rna_access.c:1499 1499 for (; item->identifier; item++, i++) { (gdb) bt - 0 0x0000555558cd71fc in RNA_enum_from_value (item=0x0, value=0) at /home/ralf/Source/blender/blender/source/blender/makesrna/intern/rna_access.c:1499 - 1 0x0000555558046a78 in ui_def_but_rna (block=0x7fffb5f8d508, type=2048, retval=0, str=0x0, x=330, y=-2246, width=165, height=21, ptr=0x7fffb5ec46f8, prop=0x55555eacff40 <rna_CompositorNodeImage_view>, index=-1, min=0, max=0, a1=-1, a2=-1, tip=0x0) at /home/ralf/Source/blender/blender/source/blender/editors/interface/interface.c:3431 #2 0x0000555558047e6a in uiDefButR_prop (block=0x7fffb5f8d508, type=2048, retval=0, str=0x0, x=330, y=-2246, width=165, height=21, ptr=0x7fffb5ec46f8, prop=0x55555eacff40 <rna_CompositorNodeImage_view>, index=-1, min=0, max=0, a1=-1, a2=-1, tip=0x0) at /home/ralf/Source/blender/blender/source/blender/editors/interface/interface.c:3767 #3 0x00005555580a4520 in uiDefAutoButR (block=0x7fffb5f8d508, ptr=0x7fffb5ec46f8, prop=0x55555eacff40 <rna_CompositorNodeImage_view>, index=-1, name=0x0, icon=0, x1=330, y1=-2246, x2=165, y2=21) at /home/ralf/Source/blender/blender/source/blender/editors/interface/interface_utils.c:112 #4 0x0000555557dad59e in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5bf5420) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:916 #5 0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5bf5b20) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934 #6 0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5ec4960) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934 #7 0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5ec4b20) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934 #8 0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5faaa40) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934 #9 0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5faaab0) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934 #10 0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb83d8920) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934 #11 0x0000555557dad718 in outliner_draw_rnabuts (block=0x7fffb5f8d508, ar=0x7fffb5b13248, soops=0x7fffb5863588, sizex=330, lb=0x7fffb5863660) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:934 - 12 0x0000555557db0e02 in draw_outliner (C=0x7fffcf4910b8) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/outliner_draw.c:1888 - 13 0x0000555557da9769 in outliner_main_region_draw (C=0x7fffcf4910b8, ar=0x7fffb5b13248) at /home/ralf/Source/blender/blender/source/blender/editors/space_outliner/space_outliner.c:278 - 14 0x00005555582736e9 in ED_region_do_draw (C=0x7fffcf4910b8, ar=0x7fffb5b13248) at /home/ralf/Source/blender/blender/source/blender/editors/screen/area.c:518 - 15 0x0000555557ce0c48 in wm_method_draw_triple (C=0x7fffcf4910b8, win=0x7fffb5e73d48) at /home/ralf/Source/blender/blender/source/blender/windowmanager/intern/wm_draw.c:568 - 16 0x0000555557ce1bd2 in wm_draw_update (C=0x7fffcf4910b8) at /home/ralf/Source/blender/blender/source/blender/windowmanager/intern/wm_draw.c:966 - 17 0x0000555557cdb583 in WM_main (C=0x7fffcf4910b8) at /home/ralf/Source/blender/blender/source/blender/windowmanager/intern/wm.c:510 #18 0x0000555557cd6591 in main (argc=1, argv=0x7fffffffe148) at /home/ralf/Source/blender/blender/source/creator/creator.c:527 ```
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @cheleb

Added subscriber: @cheleb
Bastien Montagne self-assigned this 2017-07-31 16:26:56 +02:00

This issue was referenced by f815aa01eb

This issue was referenced by f815aa01ebdd15acf5c439a3f6365dc408c2f365

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52232
No description provided.